# house_chat

./: .gitignore  AGENTS.md  app.py  main_house.py  pyproject.toml  readme.md  todo.md
archive/: house-demo.py  scheduler.py  todo-list-demo.py
src/: ai_chat_history.py  ai_prompts.py  ai_responses.py  scheduler.py  telegram_broadcast.py  telegram_handlers.py  telegram_user_data.py  telegram_user_id_manager.py  tool_def_generator.py  tool_example.py  toolbox.py
src/toolbox/: tool_def_generator.py  toolbox.py
src/tools/: __init__.py  car_app.py  dwd_app.py  house_energy.py  news_app.py  todo_app.py  trash_app.py  weather_app.py
