[tool.poetry]
name = "chat-house"
version = "0.1.0"
description = ""
authors = ["Stefan Jacobs <stefan.jacobs@deutschebahn.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
python-telegram-bot = "^21.6"
requests = "^2.32.3"
openai = "^1.50.1"
pydantic-core = "=2.23.3"
python-dotenv = "^1.0.1"
dwdwfsapi = "^1.1.0"
aiosqlite = "^0.20.0"
jiter = "=0.5.0"
ics = "^0.7.2"
pytz = "^2024.2"
apscheduler = "^3.10.4"
weconnect = "^0.60.5"
feedparser = "^6.0.11"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
